RESOLVED FIXED 99567
Web Inspector: Shadow DOM: Node removal doesn't reflect
https://bugs.webkit.org/show_bug.cgi?id=99567
Summary Web Inspector: Shadow DOM: Node removal doesn't reflect
Kent Tamura
Reported 2012-10-17 02:04:59 PDT
Created attachment 169129 [details] Screenshot Environment: Google Chrome 24.0.1298.0 canary Steps to reproduce 0. Enable "Show Shadow DOM" in "General" tab of DevTools setting 1. Open data:text/html,<input type=time> 2. "Inspect Element" on the time field 3. In the Elements panel, expand all of shadow nodes of the time field. You'll see two or three <span>s with some aria attributes. 4. Make sure selecting the time field in the Elements panel 5. Open JavaScript console 6. Type $0.value = "23:59"; 7. Observe the shadow nodes Expected: Shadow nodes in the Elements panel are replaced for the value "23:59" Actual: Shadow nodes for "23:59" are appended in the Elements panel. See attached screenshot.
Attachments
Screenshot (54.31 KB, image/png)
2012-10-17 02:04 PDT, Kent Tamura
no flags
Patch (5.07 KB, patch)
2012-10-17 20:18 PDT, Shinya Kawanaka
no flags
Patch (4.27 KB, patch)
2012-10-17 21:36 PDT, Shinya Kawanaka
no flags
Patch (4.94 KB, patch)
2012-10-17 23:16 PDT, Shinya Kawanaka
no flags
Patch (4.88 KB, patch)
2012-10-18 18:47 PDT, Shinya Kawanaka
no flags
Patch for landing (4.87 KB, patch)
2012-10-21 18:07 PDT, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-10-17 19:27:23 PDT
I'm taking a look at this.
Shinya Kawanaka
Comment 2 2012-10-17 20:18:16 PDT
Kent Tamura
Comment 3 2012-10-17 20:32:30 PDT
Comment on attachment 169327 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169327&action=review > LayoutTests/inspector/elements/update-time-value-with-shadow.html:39 > + <input id="input" type="time" value="14:00" /> input[type=time] with this structure is available only on desktop Chromium for now. We had better test with an element which is available on any platforms. e.g. Prepare <input type=text>, then change the type like input.type = "checkbox"
Shinya Kawanaka
Comment 4 2012-10-17 20:58:57 PDT
(In reply to comment #3) > (From update of attachment 169327 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=169327&action=review > > > LayoutTests/inspector/elements/update-time-value-with-shadow.html:39 > > + <input id="input" type="time" value="14:00" /> > > input[type=time] with this structure is available only on desktop Chromium for now. We had better test with an element which is available on any platforms. e.g. Prepare <input type=text>, then change the type like input.type = "checkbox" OK. I'll change the test case soon.
Shinya Kawanaka
Comment 5 2012-10-17 21:04:20 PDT
(In reply to comment #4) > (In reply to comment #3) > > (From update of attachment 169327 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=169327&action=review > > > > > LayoutTests/inspector/elements/update-time-value-with-shadow.html:39 > > > + <input id="input" type="time" value="14:00" /> > > > > input[type=time] with this structure is available only on desktop Chromium for now. We had better test with an element which is available on any platforms. e.g. Prepare <input type=text>, then change the type like input.type = "checkbox" > > OK. I'll change the test case soon. It turned out that this issue does not happen when we change the type. Hmm...
Shinya Kawanaka
Comment 6 2012-10-17 21:10:49 PDT
Is it OK if I don't use <input />? This issue happens even if we don't use <input />. I'll just use #shadow-root and appendChild/removeChild.
Hajime Morrita
Comment 7 2012-10-17 21:12:09 PDT
(In reply to comment #6) > Is it OK if I don't use <input />? This issue happens even if we don't use <input />. > I'll just use #shadow-root and appendChild/removeChild. This sounds even better. It clarifies what the problem is.
Shinya Kawanaka
Comment 8 2012-10-17 21:36:55 PDT
Build Bot
Comment 9 2012-10-17 22:14:24 PDT
Comment on attachment 169335 [details] Patch Attachment 169335 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14391875 New failing tests: inspector/elements/update-shadowdom.html
Shinya Kawanaka
Comment 10 2012-10-17 22:22:59 PDT
Ah, we have to skip mac...
Shinya Kawanaka
Comment 11 2012-10-17 23:16:56 PDT
Pavel Feldman
Comment 12 2012-10-18 05:07:16 PDT
Comment on attachment 169349 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169349&action=review > LayoutTests/inspector/elements/update-shadowdom.html:9 > + shadowRoot.appendChild(document.createElement('span')); Do you want to capture both states? I.e. that the addition was reflected in the inspector as well?
Shinya Kawanaka
Comment 13 2012-10-18 18:47:12 PDT
Shinya Kawanaka
Comment 14 2012-10-18 18:47:35 PDT
> Do you want to capture both states? I.e. that the addition was reflected in the inspector as well? Ah... It's my mistake. Removed.
WebKit Review Bot
Comment 15 2012-10-19 22:08:53 PDT
Comment on attachment 169529 [details] Patch Rejecting attachment 169529 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/14466692
Shinya Kawanaka
Comment 16 2012-10-21 18:07:55 PDT
Created attachment 169820 [details] Patch for landing
WebKit Review Bot
Comment 17 2012-10-21 19:58:37 PDT
Comment on attachment 169820 [details] Patch for landing Clearing flags on attachment: 169820 Committed r132024: <http://trac.webkit.org/changeset/132024>
WebKit Review Bot
Comment 18 2012-10-21 19:58:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.