Web Inspector: Shadow DOM: Node removal doesn't reflect. https://bugs.webkit.org/show_bug.cgi?id=99567

Reviewed by Pavel Feldman.

Source/WebCore:

We have to call InspectorInstrumentation::willRemoveDOMNode() even if a node is in a shadow tree.
Otherwise, node won't be removed from the inspector.

Test: inspector/elements/update-shadowdom.html

* dom/ContainerNode.cpp:
(WebCore::dispatchChildRemovalEvents):

LayoutTests:

* inspector/elements/update-shadowdom-expected.txt: Added.
* inspector/elements/update-shadowdom.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/117959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132024 268f45cc-cd09-0410-ab3c-d52691b4dbfc